--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.13.2",
     "gsap": "^3.13.0",
     "motion": "^12.23.24",
+    "ogl": "^0.0.88",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.1",
